# market

./: .gitignore  README.md  codama.json  deploy_local.sh  package-lock.json  package.json  tsconfig.tsbuildinfo
anchor/: Anchor.toml
anchor/programs/identity_score/: Cargo.toml
anchor/programs/identity_score/src/: constants.rs  errors.rs  events.rs  lib.rs  tests.rs
anchor/programs/identity_score/src/instructions/: identity.rs  score.rs  transfer.rs
anchor/programs/identity_score/src/state/: identity.rs  mod.rs  score.rs  transfer.rs
anchor/programs/vault/src/: lib.rs
src/: AdminPage.tsx  App.tsx  AuthPage.tsx  CreditScorePage.tsx  IdentityPage.tsx  MainPage.tsx  TransferPage.tsx  index.css  main.tsx  providers.tsx  routes.tsx  solanaClient.ts
src/components/ui/: ActionButton.tsx  AddressDisplay.tsx  AlertModal.tsx  Button.tsx  Card.tsx  ConfirmModal.tsx  EmptyState.tsx  Input.tsx  LoadingSpinner.tsx  Modal.tsx  StatusBadge.tsx  TransferCard.tsx  index.ts
src/config/: index.ts
src/hooks/: useAlert.tsx  useAsyncOperation.ts  useConfirmModal.ts  useCreditScore.ts  useIdentity.ts  useLogger.ts  usePda.ts  useTransactionHelper.ts  useTransfer.ts
src/services/: identityScoreService.ts
src/styles/: constants.ts  globals.css  theme.ts
src/types/: interfaces.ts
src/utils/: account.ts  encoding.ts  error.ts  format.ts  index.ts  time.ts  transactionLogs.ts
