[package]
name = "identity_score"
version = "0.1.0"
description = "Combined Identity and Credit Score Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "identity_score"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }


[dev-dependencies]
litesvm = "=0.7.1"
solana-sdk = "2.3"
solana-system-interface = "3.0.0"



